--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         navigationVersion = "2.3.1"
         roomVersion = "2.2.5"
         testExtJunitVersion = "1.1.2"
+        mockkVersion = "1.12.2"
     }
 
     repositories {
