--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$dataStoreVersion"
 
+    //LottieAnimation
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
     //Test
     testImplementation "junit:junit:$junitVersion"
     testImplementation "io.mockk:mockk:$mockkVersion"
