--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
         mockkVersion = "1.12.2"
         coroutineTestVersion = "1.4.0"
         archCoreTestingVersion = "2.1.0"
+        lottieVersion = "5.0.3"
     }
 
     repositories {
