--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,9 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunner "com.ex2.hiltespresso.CustomTestRunner"
+        //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.ik.mvvmtaskapp.hiltespresso.CustomTestRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
 
         packagingOptions {
             exclude 'META-INF/DEPENDENCIES'
@@ -55,6 +56,11 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    testOptions {
+        animationsDisabled = true
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
 }
 
@@ -117,4 +123,5 @@ dependencies {
 
     //Test helpers
     testImplementation "androidx.room:room-testing:$roomVersion"
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
 }
