--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
         kotlinVersion = "1.4.10"
         ktxVersion = "1.3.2"
         lifecycleVersion = "2.2.0"
-        materialVersion = "1.3.0-alpha03"
+        materialVersion = "1.3.0"
         navigationVersion = "2.3.1"
         roomVersion = "2.2.5"
         testExtJunitVersion = "1.1.2"
@@ -41,6 +41,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
     }
 }
 
