--- a/build.gradle
+++ b/build.gradle
@@ -7,25 +7,26 @@ buildscript {
         compileSdkVersion = 31
 
         //App dependencies
-        appCompatVersion = "1.2.0"
-        constraintLayoutVersion = "2.0.4"
-        coroutinesVersion = "1.3.9"
-        dataStoreVersion = "1.0.0-alpha02"
-        espressoVersion = "3.3.0"
-        fragmentVersion = "1.3.0-beta01"
+        appCompatVersion = "1.4.1"
+        constraintLayoutVersion = "2.1.3"
+        testCoreVersion = "1.4.0"
+        coroutinesVersion = "1.6.1"
+        dataStoreVersion = "1.0.0"
+        espressoVersion = "3.4.0"
+        fragmentVersion = "1.4.1"
         gradleVersion = "4.1.0"
-        hiltAndroidXVersion = "1.0.0-alpha02"
-        hiltVersion = "2.28.3-alpha"
+        hiltAndroidXVersion = "1.0.0"
+        hiltVersion = "2.40.5"
         junitVersion = "4.13.1"
-        kotlinVersion = "1.4.10"
-        ktxVersion = "1.3.2"
-        lifecycleVersion = "2.2.0"
-        materialVersion = "1.3.0"
-        navigationVersion = "2.3.1"
-        roomVersion = "2.2.5"
-        testExtJunitVersion = "1.1.2"
+        kotlinVersion = "1.6.21"
+        ktxVersion = "1.7.0"
+        lifecycleVersion = "2.4.1"
+        materialVersion = "1.6.0"
+        navigationVersion = "2.4.2"
+        roomVersion = "2.4.2"
+        testExtJunitVersion = "1.4.0"
         mockkVersion = "1.12.2"
-        coroutineTestVersion = "1.4.0"
+        coroutineTestVersion = "1.6.1"
         archCoreTestingVersion = "2.1.0"
         lottieVersion = "5.0.3"
         fragmentTestingVersion = "1.4.1"
