--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ android {
 
     testOptions {
         animationsDisabled = true
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
 }
 
@@ -129,7 +130,6 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hiltVersion"
     androidTestImplementation "androidx.navigation:navigation-testing:$navigationVersion"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hiltVersion"
-    //debugImplementation "androidx.fragment:fragment-testing:$fragmentTestingVersion"
 
     //Test helpers
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
