--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -28,7 +28,6 @@ jobs:
       - name: Build the app
         run: ./gradlew build
 
-
   test:
     runs-on: macos-latest
     needs: build
@@ -37,33 +36,33 @@ jobs:
         api-level: [24, 28, 29 ,31]
         target: [default]
 
-      steps:
-        - name: checkout
-          uses: actions/checkout@v2
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
 
-        - name: Set up JDK 1.8
-          uses: actions/setup-java@v1
-          with:
-            java-version: 1.8
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
 
-        - name: Run unit tests
-          run: ./gradlew test --stacktrace
+      - name: Run unit tests
+        run: ./gradlew test --stacktrace
 
-        - name: Run instrumentation tests
-          uses: reactivecircus/android-emulator-runner@v2
-          with:
-            api-level: ${{ matrix.api-level }}
-            target: ${{ matrix.target }}
-            arch: x86_64
-            profile: Nexus 6
-            script: ./gradlew connectedCheck
+      - name: Run instrumentation tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: x86_64
+          profile: Nexus 6
+          script: ./gradlew connectedCheck
 
-        - name: Upload Reports
-          uses: actions/upload-artifact@v2
-          with:
-            name: Test-Reports
-            path: app/build/reports
-          iif: always()
+      - name: Upload Reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test-Reports
+          path: app/build/reports
+        if: always()
 
 
 
