--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -15,12 +15,13 @@ jobs:
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: '11'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -40,10 +41,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - name: Set up JDK 11
+          uses: actions/setup-java@v3
+          with:
+            distribution: 'temurin'
+            java-version: '11'
 
       - name: Run unit tests
         run: ./gradlew test --stacktrace
