--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -47,6 +47,9 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Run unit tests
         run: ./gradlew test --stacktrace
 
