Workflow fix for UI tests

--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build the app
-        run: ./gradlew build
+        run: ./gradlew assembleDebug
 
   test:
     runs-on: macos-latest
