--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ buildscript {
         archCoreTestingVersion = "2.1.0"
         lottieVersion = "5.0.3"
         fragmentTestingVersion = "1.4.1"
+        testInstrumentationRunnerVersion = "1.4.0"
+        testOrchestratorVersion = "1.4.1"
     }
 
     repositories {
