--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -27,15 +27,11 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build the app
-        run: ./gradlew assembleDebug
+        run: ./gradlew build
 
   test:
     runs-on: macos-latest
     needs: build
-    strategy:
-      matrix:
-        api-level: [24, 28, 29 ,31]
-        target: [default]
 
     steps:
       - name: checkout
@@ -44,30 +40,13 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          java-version: 11
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Run unit tests
         run: ./gradlew test --stacktrace
-
-      - name: Run instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
-          arch: x86_64
-          profile: Nexus 6
-          script: ./gradlew connectedCheck
-
-      - name: Upload Reports
-        uses: actions/upload-artifact@v2
-        with:
-          name: Test-Reports
-          path: app/build/reports
-        if: always()
 
 
 
