--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -40,7 +40,8 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 11
+          distribution: 'temurin'
+          java-version: '11'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
