--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -90,6 +90,9 @@ jobs:
           gradlePath: app/build.gradle
           versionCode: ${{ github.run_number }}
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        
       - name: Assemble Release Bundle
         run: ./gradlew bundleRelease
 
