--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -112,7 +112,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1.0.15
         with:
           serviceAccountJson: service_account.json
-          packageName: nl.jovmit.friends
+          packageName: com.ik.mmvmtaskapp
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
           whatsNewDirectory: whatsNewDirectory/
