--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -108,7 +108,7 @@ jobs:
       - name: Setup authorization with Google Play Store
         run: echo '${{ secrets.GOOGLE_SERVICES_API }}' > service_account.json
 
-      - name: Deploy to alpha
+      - name: Deploy to internal
         uses: r0adkll/upload-google-play@v1.0.15
         with:
           serviceAccountJson: service_account.json
